--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0,user-scalable=no"/>
 	<title>Document</title>
 	<link rel="stylesheet" href="css/style.css">
-	<script src="js/jquery-3.4.1.min.js"></script>
+	<script src="js/jquery-1.10.2.min.js"></script>
 	<script src="js/common.js"></script>
 	<script src="js/animation.js"></script>
 	<script src="js/main.js"></script>
@@ -16,7 +16,7 @@
 		<h3 class="author">Created by laurenyang</h3>
 		<div class="wrapper">
 			<div class="score-wrapper">
-				<span id="txt">scoreï¼?/span>
+				<span id="txt">scoreï¼š</span>
 				<span id="score">0</span>
 			</div>
 			<div class="newgame-wrapper">
